# seafowl-udf-geo

./: Cargo.toml  README.md  create_udf.sh  query_udf.sh
src/: lib.rs
